# data-science

./: .gitattributes  .gitignore  README.md  pyproject.toml
ch10_introduction_to_artificial_neural_networks_with_keras/: activations.ipynb  ch10_introduction_to_artificial_neural_networks_with_keras.ipynb
ch2_end_to_end_machine_learning_project/.ipynb_checkpoints/: ch2_end_to_end_machine_learning_project-checkpoint.ipynb
ch3_classification/: ch3_classification.ipynb
ch3_classification/.ipynb_checkpoints/: ch3_classification-checkpoint.ipynb
ch4_training_models/: ch4_training_models.ipynb
ch4_training_models/.ipynb_checkpoints/: ch4_training_models-checkpoint.ipynb
ch7_ensemble_learning_and_random_forests/: ch7_ensemble_learning_and_random_forests.ipynb
ch9_unsupervised_learning_techniques/: ch9_unsupervised_learning_techniques_gaussian_mixtures.ipynb
data_science/util/: print_images.py  print_images_in_subfigures.py
examples/gpu-availability/: gpu-availability.ipynb
examples/time-series-classification-transformer/: time-series-classification-transformer.ipynb
experiments/CNN-VAE/: cnn_vae.ipynb
experiments/gpu-availability/: gpu-availability.ipynb
experiments/read_image/: read_image.ipynb
homl/ch02_end_to_end_machine_learning_project/: ch2_end_to_end_machine_learning_project.ipynb
homl/ch05_support_vector_machines/: ch5_support_vector_machines.ipynb
homl/ch06_decision_trees/: ch6_decision_trees.ipynb
homl/ch08_dimensionality_reduction/: ch8_dimensionality_reduction.ipynb
homl/ch11_training_deep_neural_networks/: ch11_sec3_faster_optimizers.ipynb  (+3 more)
(+72 files in other folders)
