[project]
name = "data-science"
version = "0.1.0"
description = "Yuncong's project to study data science."
keywords = ["data science", "machine learning", "artificial intelligence"]
authors = [
    {name = "Yuncong Yu", email = "yuncong.yu@outlook.com"},
]
readme = "README.md"
lassifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "pydantic>=2.11.3",
    "scikit-learn>=1.6.1",
    "tensorflow[and-cuda]>=2.19.0",
]

[project.optional-dependencies]
test = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.7",
]
